Fixes padding on small devices

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -105,7 +105,7 @@ header {
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 1060px){
-  body > .wrapper > .banner-title.banner5,  body > .wrapper > .row{
+  body > .wrapper .banner-title,  body > .wrapper > .row {
     padding: 0 1em;
   }
 }
